--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.boxtrade</groupId>
-    <artifactId>codeAuto4j-jar</artifactId>
+    <artifactId>codeauto4j-jar</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>codeAuto4j-jar</name>
