--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-gson</artifactId>
             <version>2.8.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>retrofit</artifactId>
+                    <groupId>com.squareup.retrofit2</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
